kubernetes/ingress-kubernetes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: saena-as-todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: saena-as-todo
spec:
  tls:
    - hosts:
        - saena4.com
      secretName: saenasecret
  rules:
    - host: saena4.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: saena-as-todo
              servicePort: 8080
